@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Nov 16 15:29:14 2001 -->
+<!-- Thu Dec 13 18:38:28 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -180,8 +180,15 @@ RPM are available.
 
 <u>Post-Installation</u><br><br>
 
-After installation, you should proceed to the 
-<a href="config.html">Configuration</a> section.
+Report your installation (used only to satisfy my curiosity):
+
+<blockquote><pre>
+# ( python -c 'from TMDA.Version import *; print SUMMARY' ) \
+  | mail jason-tmdausage@mastaler.com
+</blockquote></pre>
+
+Then proceed to the <a href="config.html">Configuration</a> section.
+<br><br>
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
